# ML-voice-lead-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml  vercel.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  codeql-analysis.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  lambda_function.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/core/: __init__.py  exceptions.py  logging_config.py  middleware.py
backend/database/: models.py
backend/ml/: __init__.py  feature_extraction.py  inference.py  train.py
backend/scripts/: __init__.py  install_models.py
backend/tests/: test_main.py
config/: redis.conf
database/init/: 01_init_schema.sql  init.sql
frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.js  App.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/dashboard/: VoiceLeadAnalysisDashboard.tsx
frontend/src/lib/: api.ts
monitoring/: prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf
pipeline/: run_analysis.py  voice_analysis_pipeline.py
scripts/: deploy.sh
src/ml_voice_lead_analysis/: api.py  config.py  data_models.py
