[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-voice-lead-analysis"
version = "0.1.0"
description = "Production-ready voice lead analysis API and ML pipeline"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Project Contributors" }]
dependencies = [
  "fastapi>=0.105.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.11.0",
  "joblib>=1.3.0",
  "structlog>=23.2.0",
  "cachetools>=5.3.2",
  "orjson>=3.9.10",
  "python-multipart>=0.0.6",
]
optional-dependencies = { 
  audio = ["librosa>=0.10.1"],
  redis = ["redis[hiredis]>=5.0.1"],
  rate_limit = ["slowapi>=0.1.9"],
  aws = ["boto3>=1.28.0"],
  dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "mypy>=1.7.1",
    "ruff>=0.6.9",
    "black>=23.12.0",
    "isort>=5.12.0",
    "pre-commit>=3.6.0"
  ],
}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","B","C90","UP","N","SIM","PL"]
ignore = ["E501"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"
